#92 Add a lot of minor improvements